[package]
name = "libp2p-test"
version = "0.1.0"
edition = "2021"

[dependencies]
# libp2p = { version = "0.31.0", features = ["tcp-tokio", "mdns-tokio"] }
# tokio = { version = "0.3", features = ["io-util", "io-std", "stream", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] }
# serde = {version = "=1.0", features = ["derive"] }
# serde_json = "1.0"
# once_cell = "1.5"
# log = "0.4"
# pretty_env_logger = "0.4"
libp2p = {version ="0.52",features = ["full"]}  # Replace with the latest version
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.10"
pretty_env_logger = "0.4"
log = "0.4"
futures="0.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

